--- a/pom.xml
+++ b/pom.xml
@@ -5,4 +5,11 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>babou</name>
   <description>Because you're awesome!</description>
+  <dependencies>
+	<dependency>
+		<groupId>org.eclipse.jgit</groupId>
+		<artifactId>org.eclipse.jgit</artifactId>
+		<version>2.3.1.201302201838-r</version>
+	</dependency>  
+  </dependencies>
 </project>
